[package]
name = "pin_async"
version = "0.1.0"
authors = ["cairnszhu <cairnszhu@tencent.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[dependencies]
syn =  { version = "*", features = ["full"] }
quote = "*"
proc-macro2 =  { version="1.0.24" }
async-std = "1.7.0"

[lib]
proc_macro = true


#procmacro2_semver_exempt = true
#hygiene = true
#span_locations = true